--- a/tasks/install_docker_machine_gitlab.yml
+++ b/tasks/install_docker_machine_gitlab.yml
@@ -1,12 +1,12 @@
 ---
-- name: "download docker machine (gitlab version)"
+- name: install_docker_machine_gitlab | "download docker machine (gitlab version)"
   get_url:
     url: "{{ docker_machine_gitlab_base_url }}"
     dest: /usr/local/bin/docker-machine
     mode: 'u=rwx,g=rx,o=rx'
     force: yes
 
-- name: download docker machine bash completion script
+- name: install_docker_machine_gitlab | "download docker machine bash completion script
   get_url:
     url: "https://gitlab.com/gitlab-org/ci-cd/docker-machine/-/raw/master/contrib/completion/bash/{{ item }}.bash"
     dest: "/etc/bash_completion.d/{{ item }}"
