--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,27 +1,32 @@
 ---
-- include: debian_install_docker.yml
+- name: main | include debian_install_docker
+  include: debian_install_docker.yml
   when: ansible_os_family == 'Debian'
   tags:
-  - docker
+    - docker
 
-- include: install_docker_compose.yml
+- name: main | include install_docker_compose
+  include: install_docker_compose.yml
   tags:
-  - docker
-  - docker-compose
+    - docker
+    - docker-compose
 
-- include: install_docker_machine.yml
+- name: main | include install_docker_machine
+  include: install_docker_machine.yml
   when: docker_machine_install|bool and not docker_machine_gitlab|bool
   tags:
-  - docker
-  - docker-machine
+    - docker
+    - docker-machine
 
-- include: install_docker_machine_gitlab.yml
+- name: main | include install_docker_machine_gitlab
+  include: install_docker_machine_gitlab.yml
   when: docker_machine_install|bool and docker_machine_gitlab|bool
   tags:
-  - docker
-  - docker-machine
+    - docker
+    - docker-machine
 
-- include: config.yml
+- name: main | include config
+  include: config.yml
   tags:
-  - docker
-  - docker-config
+    - docker
+    - docker-config
