--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 galaxy_info:
   author: Charles Sanquer
+  role_name: ansible-role-docker
   description: installe and configure docker, docker-compose, docker-machine
   min_ansible_version: 2.4
   license: LGPLv3
