--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -1,10 +1,13 @@
 ---
 dependency:
   name: galaxy
+  options:
+    requirements-file: ../../../roles.yml
 driver:
   name: docker
 lint: |
-  yamllint
+  set -e
+  yamllint .
   ansible-lint
   flake8
 platforms:
